fix: Atualizar URL do banco de dados para usar o serviço "bd" ao invés de "localhost"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     depends_on:
       - bd
     environment:
-      - POSTGRES_URL=${POSTGRES_URL:-postgresql://decideai:decideai123@localhost:5432/decideai}
+      - POSTGRES_URL=${POSTGRES_URL:-postgresql://decideai:decideai123@bd:5432/decideai}
   bd:
     build:
       context: ./bd
