--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -1,4 +1,4 @@
-FROM node:18
+FROM node:18 AS build
 
 WORKDIR /app
 COPY package*.json ./
@@ -9,6 +9,14 @@ COPY . .
 
 RUN npm run build
 
-EXPOSE 3000
+FROM nginx:stable-alpine
 
-CMD ["npm", "start"]
+COPY --from=build /app/build /usr/share/nginx/html
+
+COPY ./default.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
+
+
